--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
 <div class="container my-5">
   <div class="mb-4">
     <h5>M. Azhar</h5>
-    <p>Email: [isi email di sini] <br> Mobile: [isi nomor di sini]</p>
+    <p>Email: [isi email di sini] <br> Mobile: +62 81214056502</p>
   </div>
   <div class="mb-4">
     <h5>Dewi Damayanti</h5>
