--- a/team.html
+++ b/team.html
@@ -80,7 +80,7 @@
     <h4>Managing Director</h4>
     <p><strong>Muhammad Azhar</strong>, Bachelor in Computer System</p>
     <p>A young and energetic strategic management leader, co-founder of the company, with experience in environment including marine protected areas management and computer systems.<br/>
-    <strong>Contact:</strong> Email: [email protected] | Mobile: [your phone number]</p>
+    <strong>Contact:</strong> Email: [email protected] | Mobile: +62 81214056502</p>
 
     <h4>Director of Business and External</h4>
     <p><strong>Dewi Damayanti</strong>, Bachelor in Public Health</p>
