--- a/contact.html
+++ b/contact.html
@@ -16,26 +16,24 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg">
-  <div class="container">
-    <a class="navbar-brand d-flex align-items-center" href="index.html">
-      <img src="images/logo-gika.jpg" alt="Logo" />
+<nav class="navbar navbar-expand bg-success px-3">
+  <div class="container-fluid">
+    <a class="navbar-brand d-flex align-items-center text-white" href="index.html">
+      <img src="images/logo-gika.jpg" alt="Logo" style="height: 50px; margin-right: 10px;" />
       <strong>PT. GREEN KAPPIOTA</strong>
     </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-      <span class="navbar-toggler-icon bg-light"></span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="vision.html">Vision</a></li>
-        <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-        <li class="nav-item"><a class="nav-link" href="values.html">Values</a></li>
-        <li class="nav-item"><a class="nav-link" href="team.html">Team</a></li>
-        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-      </ul>
-    </div>
+    <ul class="navbar-nav ms-auto d-flex flex-row gap-3">
+      <li class="nav-item"><a class="nav-link text-white" href="index.html">Home</a></li>
+      <li class="nav-item"><a class="nav-link text-white" href="about.html">About</a></li>
+      <li class="nav-item"><a class="nav-link text-white" href="vision.html">Vision</a></li>
+      <li class="nav-item"><a class="nav-link text-white" href="services.html">Services</a></li>
+      <li class="nav-item"><a class="nav-link text-white" href="values.html">Values</a></li>
+      <li class="nav-item"><a class="nav-link text-white" href="team.html">Team</a></li>
+      <li class="nav-item"><a class="nav-link text-white" href="contact.html">Contact</a></li>
+    </ul>
+  </div>
+</nav>
+
   </div>
 </nav>
 
