--- a/portfolio.html
+++ b/portfolio.html
@@ -5,59 +5,131 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Portfolio – PT. GREEN KAPPIOTA</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+
   <style>
-    body { font-family: 'Segoe UI', sans-serif; background-color: #f8f9fa; }
-    .navbar { background-color: #5c6b2b; }
-    .navbar-brand, .nav-link { color: white !important; }
-    .navbar-brand img { height: 60px; margin-right: 10px; }
-    .hero { background: linear-gradient(to right, #79824b, #a0ac5e); color: white; padding: 60px 20px; text-align: center; }
-    footer { background-color: #79824b; color: white; text-align: center; padding: 30px 10px; margin-top: 60px; }
+    html, body {
+      height: 100%;
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f8f9fa;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .navbar {
+      background-color: #5c6b2b;
+    }
+
+    .navbar-brand, .nav-link {
+      color: white !important;
+    }
+
+    .navbar-brand img {
+      height: 60px;
+      margin-right: 10px;
+    }
+
+    .nav-scroll {
+      overflow-x: auto;
+      white-space: nowrap;
+      scrollbar-width: none;
+    }
+
+    .nav-scroll::-webkit-scrollbar {
+      display: none;
+    }
+
+    .nav .nav-link:hover {
+      background-color: rgba(255, 255, 255, 0.2);
+      border-radius: 5px;
+    }
+
+    .hero {
+      background: linear-gradient(to right, #79824b, #a0ac5e);
+      color: white;
+      padding: 60px 20px;
+      text-align: center;
+    }
+
+    main {
+      flex: 1;
+    }
+
+    footer {
+      background-color: #79824b;
+      color: white;
+      text-align: center;
+      padding: 30px 10px;
+      margin-top: auto;
+    }
   </style>
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg">
-  <div class="container">
-    <a class="navbar-brand d-flex align-items-center" href="index.html">
-      <img src="images/logo-gika.jpg" alt="Logo" />
-      <strong>PT. GREEN KAPPIOTA</strong>
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-      <span class="navbar-toggler-icon bg-light"></span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="vision.html">Vision</a></li>
-        <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-        <li class="nav-item"><a class="nav-link" href="values.html">Values</a></li>
-        <li class="nav-item"><a class="nav-link" href="team.html">Team</a></li>
-        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+<!-- NAVBAR -->
+<nav class="navbar px-3">
+  <div class="container-fluid d-block">
+    <div class="d-flex align-items-center mb-2">
+      <a href="index.html" class="navbar-brand d-flex align-items-center">
+        <img src="images/logo-gika.jpg" alt="Logo" />
+        <strong>PT. GREEN KAPPIOTA</strong>
+      </a>
+    </div>
+    <div class="nav-scroll">
+      <ul class="nav flex-nowrap overflow-auto text-nowrap">
+        <li class="nav-item"><a class="nav-link text-white" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="about.html">About</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="vision.html">Vision</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="services.html">Services</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="values.html">Values</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="team.html">Team</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="portfolio.html">Portfolio</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="contact.html">Contact</a></li>
       </ul>
     </div>
   </div>
 </nav>
 
+<!-- HERO -->
 <section class="hero">
   <div class="container">
     <h1>Our Portfolio</h1>
   </div>
 </section>
 
-<div class="container my-5">
-  <ul>
-    <li>Short desktop study on carbon measurement methods in Kalimantan with Pollination, 2023</li>
-    <li>EIA supervision to Greencorp Company on Hua Yoo Port, Pomala, 2023</li>
-    <li>Individual consultant for carbon pricing instruments – UNDP, 2022</li>
-    <li>Technical expert for Indonesian Environment Fund on Carbon Market – PT CBS/GGGI, 2022</li>
-    <li>Carbon Market Expert – ADB Article 6 Support Facility & Energy Access, 2021–2022</li>
-    <li>National consultant for SDG Metadata upgrade – JICA, 2022</li>
-    <li>SDG National Action Plan Development – JICA, 2021</li>
-    <li>Climate Mitigation & Energy Planning Integration – UNDP MTRE3, 2021</li>
-  </ul>
-</div>
+<!-- MAIN CONTENT -->
+<main>
+  <div class="container my-5">
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item">
+        Short desktop study on appropriate method of carbon measurement of forestry in Kalimantan with Pollination, 2023.
+      </li>
+      <li class="list-group-item">
+        EIA supervision to Greencorp Company on Hua Yoo Port in Pomala, 2023.
+      </li>
+      <li class="list-group-item">
+        Individual consultant on carbon pricing instruments development, UNDP, 2022.
+      </li>
+      <li class="list-group-item">
+        Technical Expert for Identification of Role and Opportunities for Indonesian Environment Fund in Carbon Market Scheme, PT CBS/GGGI, 2022.
+      </li>
+      <li class="list-group-item">
+        Carbon market expert for Article 6 Support Facility and Supporting Sustainable and Universal Electricity Access Phase 2 (Subproject 3), Asian Development Bank, 2021–2022.
+      </li>
+      <li class="list-group-item">
+        National consultant on technical assistant for upgrading the national metadata for SDGs, JICA, 2022.
+      </li>
+      <li class="list-group-item">
+        Technical Assistance on Development of the National Action Plan for SDGs, JICA, 2021.
+      </li>
+      <li class="list-group-item">
+        Mainstreaming Regional Climate Mitigation Action and Energy Planning into RPJMD Draft – MTRE3/UNDP, 2021.
+      </li>
+    </ul>
+  </div>
+</main>
 
+<!-- FOOTER -->
 <footer>
   &copy; 2025 PT. GREEN KAPPIOTA – All rights reserved.
 </footer>
