--- a/contact.html
+++ b/contact.html
@@ -3,61 +3,148 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Contact Us – PT. GREEN KAPPIOTA</title>
+  <title>Contact – PT. GREEN KAPPIOTA</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
-    body { font-family: 'Segoe UI', sans-serif; background-color: #f8f9fa; }
-    .navbar { background-color: #5c6b2b; }
-    .navbar-brand, .nav-link { color: white !important; }
-    .navbar-brand img { height: 60px; margin-right: 10px; }
-    .hero { background: linear-gradient(to right, #79824b, #a0ac5e); color: white; padding: 60px 20px; text-align: center; }
-    footer { background-color: #79824b; color: white; text-align: center; padding: 30px 10px; margin-top: 60px; }
+    html, body {
+      height: 100%;
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f8f9fa;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .navbar {
+      background-color: #5c6b2b;
+    }
+
+    .navbar-brand, .nav-link {
+      color: white !important;
+    }
+
+    .navbar-brand img {
+      height: 60px;
+      margin-right: 10px;
+    }
+
+    .nav-scroll {
+      overflow-x: auto;
+      white-space: nowrap;
+      scrollbar-width: none;
+    }
+
+    .nav-scroll::-webkit-scrollbar {
+      display: none;
+    }
+
+    .nav .nav-link:hover {
+      background-color: rgba(255, 255, 255, 0.2);
+      border-radius: 5px;
+    }
+
+    .hero {
+      background: linear-gradient(to right, #79824b, #a0ac5e);
+      color: white;
+      padding: 60px 20px;
+      text-align: center;
+    }
+
+    main {
+      flex: 1;
+    }
+
+    footer {
+      background-color: #79824b;
+      color: white;
+      text-align: center;
+      padding: 30px 10px;
+      margin-top: auto;
+    }
+
+    .contact-box {
+      background: #ffffff;
+      border-radius: 8px;
+      padding: 30px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
   </style>
 </head>
 <body>
 
-<nav class="navbar navbar-expand bg-success px-3">
-  <div class="container-fluid">
-    <a class="navbar-brand d-flex align-items-center text-white" href="index.html">
-      <img src="images/logo-gika.jpg" alt="Logo" style="height: 50px; margin-right: 10px;" />
-      <strong>PT. GREEN KAPPIOTA</strong>
-    </a>
-    <ul class="navbar-nav ms-auto d-flex flex-row gap-3">
-      <li class="nav-item"><a class="nav-link text-white" href="index.html">Home</a></li>
-      <li class="nav-item"><a class="nav-link text-white" href="about.html">About</a></li>
-      <li class="nav-item"><a class="nav-link text-white" href="vision.html">Vision</a></li>
-      <li class="nav-item"><a class="nav-link text-white" href="services.html">Services</a></li>
-      <li class="nav-item"><a class="nav-link text-white" href="values.html">Values</a></li>
-      <li class="nav-item"><a class="nav-link text-white" href="team.html">Team</a></li>
-      <li class="nav-item"><a class="nav-link text-white" href="contact.html">Contact</a></li>
-    </ul>
+<!-- NAVBAR -->
+<nav class="navbar px-3">
+  <div class="container-fluid d-block">
+    <div class="d-flex align-items-center mb-2">
+      <a href="index.html" class="navbar-brand d-flex align-items-center">
+        <img src="images/logo-gika.jpg" alt="Logo" />
+        <strong>PT. GREEN KAPPIOTA</strong>
+      </a>
+    </div>
+    <div class="nav-scroll">
+      <ul class="nav flex-nowrap overflow-auto text-nowrap">
+        <li class="nav-item"><a class="nav-link text-white" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="about.html">About</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="vision.html">Vision</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="services.html">Services</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="values.html">Values</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="team.html">Team</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="portfolio.html">Portfolio</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="contact.html">Contact</a></li>
+      </ul>
+    </div>
   </div>
 </nav>
 
-  </div>
-</nav>
-
+<!-- HERO -->
 <section class="hero">
   <div class="container">
     <h1>Contact Us</h1>
   </div>
 </section>
 
-<div class="container my-5">
-  <div class="mb-4">
-    <h5>M. Azhar</h5>
-    <p>Email: [isi email di sini] <br> Mobile: +62 81214056502</p>
-  </div>
-  <div class="mb-4">
-    <h5>Dewi Damayanti</h5>
-    <p>Email: dewidamayanti2614@gmail.com <br> Mobile: +62 81293716447</p>
-  </div>
-  <div>
-    <h5>Alamat</h5>
-    <p>Tampak Siring Blok B3/1, Puri Gading, Bekasi, Jawa Barat</p>
-  </div>
-</div>
+<!-- MAIN CONTENT -->
+<main>
+  <div class="container my-5">
+    <div class="row">
+      <!-- Contact Info -->
+      <div class="col-md-6 mb-4">
+        <div class="contact-box">
+          <h4>Contact Information</h4>
+          <p><strong>M. Azhar</strong></p>
+          <p>Email: [your-email@example.com]<br>Mobile: [your-phone-number]</p>
+          <p><strong>Dewi Damayanti</strong></p>
+          <p>Email: dewidamayanti2614@gmail.com<br>Mobile: +62 81293716447</p>
+          <p><strong>Address:</strong><br>Tampak Siring Blok B3/1, Puri Gading, Bekasi</p>
+        </div>
+      </div>
 
+      <!-- Contact Form (dummy, non-functional) -->
+      <div class="col-md-6">
+        <div class="contact-box">
+          <h4>Send Us a Message</h4>
+          <form>
+            <div class="mb-3">
+              <label for="name" class="form-label">Your Name</label>
+              <input type="text" class="form-control" id="name" placeholder="Full name" />
+            </div>
+            <div class="mb-3">
+              <label for="email" class="form-label">Email address</label>
+              <input type="email" class="form-control" id="email" placeholder="name@example.com" />
+            </div>
+            <div class="mb-3">
+              <label for="message" class="form-label">Your Message</label>
+              <textarea class="form-control" id="message" rows="4"></textarea>
+            </div>
+            <button type="submit" class="btn btn-success">Send</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</main>
+
+<!-- FOOTER -->
 <footer>
   &copy; 2025 PT. GREEN KAPPIOTA – All rights reserved.
 </footer>
