--- a/index.html
+++ b/index.html
@@ -8,79 +8,112 @@
   <style>
     html, body {
       height: 100%;
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f8f9fa;
       display: flex;
       flex-direction: column;
     }
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #f8f9fa;
-    }
+
     .navbar {
       background-color: #5c6b2b;
     }
+
     .navbar-brand, .nav-link {
       color: white !important;
     }
+
     .navbar-brand img {
       height: 60px;
       margin-right: 10px;
     }
+
+    .nav-scroll {
+      overflow-x: auto;
+      white-space: nowrap;
+      scrollbar-width: none;
+    }
+
+    .nav-scroll::-webkit-scrollbar {
+      display: none;
+    }
+
+    .nav .nav-link:hover {
+      background-color: rgba(255, 255, 255, 0.2);
+      border-radius: 5px;
+    }
+
     .hero {
       background: linear-gradient(to right, #79824b, #a0ac5e);
       color: white;
-      padding: 60px 20px;
+      padding: 80px 20px;
       text-align: center;
     }
+
     main {
       flex: 1;
     }
+
     footer {
       background-color: #79824b;
       color: white;
       text-align: center;
       padding: 30px 10px;
+      margin-top: auto;
     }
   </style>
 </head>
 <body>
 
-<nav class="navbar navbar-expand bg-success px-3">
-  <div class="container-fluid">
-    <a class="navbar-brand d-flex align-items-center text-white" href="index.html">
-      <img src="images/logo-gika.jpg" alt="Logo" style="height: 50px; margin-right: 10px;" />
-      <strong>PT. GREEN KAPPIOTA</strong>
-    </a>
-    <ul class="navbar-nav ms-auto d-flex flex-row gap-3">
-      <li class="nav-item"><a class="nav-link text-white" href="index.html">Home</a></li>
-      <li class="nav-item"><a class="nav-link text-white" href="about.html">About</a></li>
-      <li class="nav-item"><a class="nav-link text-white" href="vision.html">Vision</a></li>
-      <li class="nav-item"><a class="nav-link text-white" href="services.html">Services</a></li>
-      <li class="nav-item"><a class="nav-link text-white" href="values.html">Values</a></li>
-      <li class="nav-item"><a class="nav-link text-white" href="team.html">Team</a></li>
-      <li class="nav-item"><a class="nav-link text-white" href="contact.html">Contact</a></li>
-    </ul>
+<!-- NAVBAR -->
+<nav class="navbar px-3">
+  <div class="container-fluid d-block">
+    <div class="d-flex align-items-center mb-2">
+      <a href="index.html" class="navbar-brand d-flex align-items-center">
+        <img src="images/logo-gika.jpg" alt="Logo" />
+        <strong>PT. GREEN KAPPIOTA</strong>
+      </a>
+    </div>
+    <div class="nav-scroll">
+      <ul class="nav flex-nowrap overflow-auto text-nowrap">
+        <li class="nav-item"><a class="nav-link text-white" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="about.html">About</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="vision.html">Vision</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="services.html">Services</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="values.html">Values</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="team.html">Team</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="portfolio.html">Portfolio</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="contact.html">Contact</a></li>
+      </ul>
+    </div>
   </div>
 </nav>
 
+<!-- HERO -->
+<section class="hero">
+  <div class="container">
+    <h1>Welcome to PT. GREEN KAPPIOTA</h1>
+    <p>Environmental & ESG Consultant</p>
+  </div>
+</section>
 
+<!-- MAIN CONTENT -->
 <main>
-  <section class="hero">
-    <div class="container">
-      <h1>Welcome to PT. GREEN KAPPIOTA</h1>
-      <p>Reliable Consultant in ESG, Environment, and Sustainability Solutions</p>
-    </div>
-  </section>
-
   <div class="container my-5">
-    <p>PT. GREEN KAPPIOTA is a consultant that has a track record in the environment, including ESG, Environmental Impact Assessment (EIA), rehabilitation and conservation of forest as well as Net Zero Emission (NZE) target and managing Corporate Social Responsibility (CSR). Supported by national and international experts experienced in their fields.</p>
+    <p>
+      <strong>PT. GREEN KAPPIOTA CONSULTANT (PT. GIKA)</strong> is a consultant that has a track record in the environment, including ESG, Environmental Impact Assessment (EIA), rehabilitation and conservation of forest, Net Zero Emission (NZE) target and managing Corporate Social Responsibility (CSR).
+    </p>
+    <p>
+      We help stakeholders achieve their goals, supported by national and international experts experienced in their fields. Our solutions empower companies to be more responsible, efficient, and sustainable.
+    </p>
   </div>
 </main>
 
+<!-- FOOTER -->
 <footer>
   &copy; 2025 PT. GREEN KAPPIOTA – All rights reserved.
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
 </body>
 </html>
