--- a/services.html
+++ b/services.html
@@ -9,32 +9,51 @@
     html, body {
       height: 100%;
       margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f8f9fa;
       display: flex;
       flex-direction: column;
     }
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #f8f9fa;
-    }
+
     .navbar {
       background-color: #5c6b2b;
     }
+
     .navbar-brand, .nav-link {
       color: white !important;
     }
+
     .navbar-brand img {
       height: 60px;
       margin-right: 10px;
     }
+
+    .nav-scroll {
+      overflow-x: auto;
+      white-space: nowrap;
+      scrollbar-width: none;
+    }
+
+    .nav-scroll::-webkit-scrollbar {
+      display: none;
+    }
+
+    .nav .nav-link:hover {
+      background-color: rgba(255, 255, 255, 0.2);
+      border-radius: 5px;
+    }
+
     .hero {
       background: linear-gradient(to right, #79824b, #a0ac5e);
       color: white;
       padding: 60px 20px;
       text-align: center;
     }
+
     main {
       flex: 1;
     }
+
     footer {
       background-color: #79824b;
       color: white;
@@ -42,55 +61,71 @@
       padding: 30px 10px;
       margin-top: auto;
     }
+
+    .service-box {
+      background: white;
+      border-radius: 8px;
+      padding: 30px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
   </style>
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg">
-  <div class="container">
-    <a class="navbar-brand d-flex align-items-center" href="index.html">
-      <img src="images/logo-gika.jpg" alt="Logo" />
-      <strong>PT. GREEN KAPPIOTA</strong>
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-      <span class="navbar-toggler-icon bg-light"></span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="vision.html">Vision</a></li>
-        <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-        <li class="nav-item"><a class="nav-link" href="values.html">Values</a></li>
-        <li class="nav-item"><a class="nav-link" href="team.html">Team</a></li>
-        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+<!-- NAVBAR -->
+<nav class="navbar px-3">
+  <div class="container-fluid d-block">
+    <div class="d-flex align-items-center mb-2">
+      <a href="index.html" class="navbar-brand d-flex align-items-center">
+        <img src="images/logo-gika.jpg" alt="Logo" />
+        <strong>PT. GREEN KAPPIOTA</strong>
+      </a>
+    </div>
+    <div class="nav-scroll">
+      <ul class="nav flex-nowrap overflow-auto text-nowrap">
+        <li class="nav-item"><a class="nav-link text-white" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="about.html">About</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="vision.html">Vision</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="services.html">Services</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="values.html">Values</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="team.html">Team</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="portfolio.html">Portfolio</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="contact.html">Contact</a></li>
       </ul>
     </div>
   </div>
 </nav>
 
-<main>
-  <section class="hero">
-    <div class="container">
-      <h1>Our Services</h1>
-    </div>
-  </section>
+<!-- HERO -->
+<section class="hero">
+  <div class="container">
+    <h1>Our Services</h1>
+  </div>
+</section>
 
+<!-- MAIN CONTENT -->
+<main>
   <div class="container my-5">
-    <p>
-      We provide services of environmental permits and supervision in carbon pricing, as well as planning and development of Net Zero Emission (NZE) targets for companies. Our team is experienced in assisting businesses from sectors such as oil and gas, mining, and ports in formulating ESG and NZE strategies.
-    </p>
-    <ul>
-      <li>Environmental permits</li>
-      <li>Supervision in carbon pricing</li>
-      <li>Development of Net Zero Emission targets</li>
-      <li>ESG implementation planning</li>
-      <li>CSR program development</li>
-      <li>Support in forestry rehabilitation and conservation projects</li>
-    </ul>
+    <div class="service-box">
+      <p>
+        We are providing services related to environmental permits, supervision in carbon pricing, and development and planning of Net Zero Emission (NZE) targets for companies.
+      </p>
+      <p>
+        Our experience includes supporting companies in building ESG frameworks and Net Zero Emission strategies for sectors such as oil and gas, mining, and ports.
+      </p>
+      <ul>
+        <li>Environmental Impact Assessment (EIA) & permits</li>
+        <li>Carbon pricing strategy and market instruments</li>
+        <li>Net Zero Emission (NZE) roadmaps for companies</li>
+        <li>ESG policy planning and implementation</li>
+        <li>CSR management and environmental communication</li>
+        <li>Technical consulting for sustainable practices in industry</li>
+      </ul>
+    </div>
   </div>
 </main>
 
+<!-- FOOTER -->
 <footer>
   &copy; 2025 PT. GREEN KAPPIOTA – All rights reserved.
 </footer>
