--- a/values.html
+++ b/values.html
@@ -3,38 +3,57 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Company's Values – PT. GREEN KAPPIOTA</title>
+  <title>Company Values – PT. GREEN KAPPIOTA</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
     html, body {
       height: 100%;
-      display: flex;
-      flex-direction: column;
       margin: 0;
-    }
-    body {
       font-family: 'Segoe UI', sans-serif;
       background-color: #f8f9fa;
+      display: flex;
+      flex-direction: column;
     }
+
     .navbar {
       background-color: #5c6b2b;
     }
+
     .navbar-brand, .nav-link {
       color: white !important;
     }
+
     .navbar-brand img {
       height: 60px;
       margin-right: 10px;
     }
+
+    .nav-scroll {
+      overflow-x: auto;
+      white-space: nowrap;
+      scrollbar-width: none;
+    }
+
+    .nav-scroll::-webkit-scrollbar {
+      display: none;
+    }
+
+    .nav .nav-link:hover {
+      background-color: rgba(255, 255, 255, 0.2);
+      border-radius: 5px;
+    }
+
     .hero {
       background: linear-gradient(to right, #79824b, #a0ac5e);
       color: white;
       padding: 60px 20px;
       text-align: center;
     }
+
     main {
       flex: 1;
     }
+
     footer {
       background-color: #79824b;
       color: white;
@@ -42,52 +61,70 @@
       padding: 30px 10px;
       margin-top: auto;
     }
+
+    .value-box {
+      background: white;
+      border-radius: 8px;
+      padding: 30px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
   </style>
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg">
-  <div class="container">
-    <a class="navbar-brand d-flex align-items-center" href="index.html">
-      <img src="images/logo-gika.jpg" alt="Logo" />
-      <strong>PT. GREEN KAPPIOTA</strong>
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-      <span class="navbar-toggler-icon bg-light"></span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="vision.html">Vision</a></li>
-        <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-        <li class="nav-item"><a class="nav-link" href="values.html">Values</a></li>
-        <li class="nav-item"><a class="nav-link" href="team.html">Team</a></li>
-        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+<!-- NAVBAR -->
+<nav class="navbar px-3">
+  <div class="container-fluid d-block">
+    <div class="d-flex align-items-center mb-2">
+      <a href="index.html" class="navbar-brand d-flex align-items-center">
+        <img src="images/logo-gika.jpg" alt="Logo" />
+        <strong>PT. GREEN KAPPIOTA</strong>
+      </a>
+    </div>
+    <div class="nav-scroll">
+      <ul class="nav flex-nowrap overflow-auto text-nowrap">
+        <li class="nav-item"><a class="nav-link text-white" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="about.html">About</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="vision.html">Vision</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="services.html">Services</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="values.html">Values</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="team.html">Team</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="portfolio.html">Portfolio</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="contact.html">Contact</a></li>
       </ul>
     </div>
   </div>
 </nav>
 
+<!-- HERO -->
+<section class="hero">
+  <div class="container">
+    <h1>Company Values</h1>
+  </div>
+</section>
+
+<!-- MAIN CONTENT -->
 <main>
-  <section class="hero">
-    <div class="container">
-      <h1>Company's Values</h1>
-    </div>
-  </section>
-
   <div class="container my-5">
-    <h5>1. Performance and Committed Based</h5>
-    <p>We will deliver commitment to show our best performance and to meet customers' expectations all the time.</p>
-
-    <h5>2. Socially Responsible</h5>
-    <p>Respect and empathy are of our values in being socially responsible in charitable, caring for the environment and supporting our stakeholder communities.</p>
-
-    <h5>3. Deliver Integrity</h5>
-    <p>Our company will remain professional and accountable with performing in an open and transparent manner.</p>
+    <div class="value-box">
+      <h4 class="mb-4">Our Core Values</h4>
+      <div class="mb-3">
+        <h5>1. Performance and Committed Based</h5>
+        <p>We will deliver commitment to show our best performance and to meet customers' expectations all the time.</p>
+      </div>
+      <div class="mb-3">
+        <h5>2. Socially Responsible</h5>
+        <p>Respect and empathy are of our values in socially responsible in charitable, caring for the environment and supporting our stakeholder communities.</p>
+      </div>
+      <div>
+        <h5>3. Deliver Integrity</h5>
+        <p>Our company will remain professional and accountable with performing in an open and transparent manner.</p>
+      </div>
+    </div>
   </div>
 </main>
 
+<!-- FOOTER -->
 <footer>
   &copy; 2025 PT. GREEN KAPPIOTA – All rights reserved.
 </footer>
