--- a/vision.html
+++ b/vision.html
@@ -9,32 +9,51 @@
     html, body {
       height: 100%;
       margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f8f9fa;
       display: flex;
       flex-direction: column;
     }
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #f8f9fa;
-    }
+
     .navbar {
       background-color: #5c6b2b;
     }
+
     .navbar-brand, .nav-link {
       color: white !important;
     }
+
     .navbar-brand img {
       height: 60px;
       margin-right: 10px;
     }
+
+    .nav-scroll {
+      overflow-x: auto;
+      white-space: nowrap;
+      scrollbar-width: none;
+    }
+
+    .nav-scroll::-webkit-scrollbar {
+      display: none;
+    }
+
+    .nav .nav-link:hover {
+      background-color: rgba(255, 255, 255, 0.2);
+      border-radius: 5px;
+    }
+
     .hero {
       background: linear-gradient(to right, #79824b, #a0ac5e);
       color: white;
       padding: 60px 20px;
       text-align: center;
     }
+
     main {
       flex: 1;
     }
+
     footer {
       background-color: #79824b;
       color: white;
@@ -42,49 +61,70 @@
       padding: 30px 10px;
       margin-top: auto;
     }
+
+    .vision-box {
+      background: white;
+      border-radius: 8px;
+      padding: 30px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+
+    .vision-box h4 {
+      color: #5c6b2b;
+    }
   </style>
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg">
-  <div class="container">
-    <a class="navbar-brand d-flex align-items-center" href="index.html">
-      <img src="images/logo-gika.jpg" alt="Logo" />
-      <strong>PT. GREEN KAPPIOTA</strong>
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-      <span class="navbar-toggler-icon bg-light"></span>
-    </button>
-   <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="vision.html">Vision</a></li>
-        <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-        <li class="nav-item"><a class="nav-link" href="values.html">Values</a></li>
-        <li class="nav-item"><a class="nav-link" href="team.html">Team</a></li>
-        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+<!-- NAVBAR -->
+<nav class="navbar px-3">
+  <div class="container-fluid d-block">
+    <div class="d-flex align-items-center mb-2">
+      <a href="index.html" class="navbar-brand d-flex align-items-center">
+        <img src="images/logo-gika.jpg" alt="Logo" />
+        <strong>PT. GREEN KAPPIOTA</strong>
+      </a>
+    </div>
+    <div class="nav-scroll">
+      <ul class="nav flex-nowrap overflow-auto text-nowrap">
+        <li class="nav-item"><a class="nav-link text-white" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="about.html">About</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="vision.html">Vision</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="services.html">Services</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="values.html">Values</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="team.html">Team</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="portfolio.html">Portfolio</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="contact.html">Contact</a></li>
       </ul>
     </div>
   </div>
 </nav>
 
+<!-- HERO -->
+<section class="hero">
+  <div class="container">
+    <h1>Vision & Mission</h1>
+  </div>
+</section>
+
+<!-- MAIN CONTENT -->
 <main>
-  <section class="hero">
-    <div class="container">
-      <h1>Vision & Mission</h1>
-    </div>
-  </section>
-
   <div class="container my-5">
-    <h3>Vision</h3>
-    <p>Delivering reliable and competitive solutions for the benefit of the environment through the areas of ESG, EIA (including permits), rehabilitation and conservation of forest, Carbon Pricing, Net Zero Emission Target, and CSR.</p>
+    <div class="vision-box">
+      <h4>Our Vision</h4>
+      <p>
+        Delivering reliable and competitive solutions for the benefit of the environment through ESG, EIA (including permits), rehabilitation and conservation of forest, Carbon Pricing, Net Zero Emission Target and CSR.
+      </p>
 
-    <h3>Mission</h3>
-    <p>Supporting the acceleration of environmental sustainability and integrity while enhancing value for all stakeholders.</p>
+      <h4 class="mt-4">Our Mission</h4>
+      <p>
+        Supporting in acceleration of environmental sustainability and integrity while enhancing value for all stakeholders.
+      </p>
+    </div>
   </div>
 </main>
 
+<!-- FOOTER -->
 <footer>
   &copy; 2025 PT. GREEN KAPPIOTA – All rights reserved.
 </footer>
