--- a/thankyou.html
+++ b/thankyou.html
@@ -1,49 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Thank You – PT. GREEN KAPPIOTA</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
       background-color: #f8f9fa;
-      text-align: center;
-      padding-top: 100px;
+      font-family: 'Segoe UI', sans-serif;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
     }
-
-    .thank-you-box {
+    main {
+      flex: 1;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 60px 20px;
+    }
+    .thankyou-box {
       background: white;
-      padding: 50px 30px;
-      border-radius: 8px;
-      max-width: 600px;
-      margin: auto;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      padding: 40px;
+      border-radius: 12px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.1);
+      text-align: center;
     }
-
-    .thank-you-box h1 {
-      color: #5c6b2b;
-      margin-bottom: 20px;
-    }
-
-    .thank-you-box p {
-      color: #333;
-      font-size: 18px;
-    }
-
-    .btn-home {
-      margin-top: 30px;
+    footer {
+      background: #79824b;
+      color: white;
+      text-align: center;
+      padding: 30px 20px;
     }
   </style>
 </head>
 <body>
 
-<div class="thank-you-box">
-  <h1>Thank You!</h1>
-  <p>Your message has been sent successfully.<br>We will get back to you as soon as possible.</p>
-  <a href="index.html" class="btn btn-success btn-home">Back to Home</a>
-</div>
+<main>
+  <div class="thankyou-box" data-aos="zoom-in">
+    <h1 class="mb-3">Thank You!</h1>
+    <p>Your message has been sent successfully. We will get back to you soon.</p>
+    <a href="index.html" class="btn btn-success mt-4">Back to Home</a>
+  </div>
+</main>
 
+<footer>
+  &copy; 2025 PT. GREEN KAPPIOTA – All rights reserved.
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
 </body>
 </html>
