--- a/contact.html
+++ b/contact.html
@@ -8,18 +8,23 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
   <style>
-    body, html { margin: 0; padding: 0; height: 100%; font-family: 'Segoe UI', sans-serif; background: #f8f9fa; }
+    html, body {
+      height: 100%;
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: #f8f9fa;
+    }
     .navbar { background-color: #5c6b2b; }
     .navbar-brand, .nav-link { color: white !important; }
     .navbar-brand img { height: 60px; margin-right: 10px; }
-    .nav-scroll { overflow-x: auto; white-space: nowrap; scrollbar-width: none; }
-    .nav-scroll::-webkit-scrollbar { display: none; }
     .hero {
       background: linear-gradient(to right, #79824b, #a0ac5e);
       color: white;
       padding: 60px 20px;
       text-align: center;
     }
+    .nav-scroll { overflow-x: auto; white-space: nowrap; scrollbar-width: none; }
+    .nav-scroll::-webkit-scrollbar { display: none; }
     .content-section {
       padding: 40px 20px;
     }
@@ -54,6 +59,7 @@
   </style>
 </head>
 <body>
+
 <div id="loader">
   <div class="spinner-border text-success" role="status"></div>
 </div>
